# photocat

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/: release.yml
.github/workflows/: release.yml  rust.yml
ci/: ubuntu-install-packages
data/: mapping.toml
src/: datesummary.rs  fileindex.rs  indexdb.rs  jsonmeta.rs  main.rs  meta.sql  processing.rs  summarystats.rs  valuecountsummary.rs  variablemapping.rs
