[package]
name = "photocat"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.4", features = ["derive"] }
colored = "2.1.0"
comfy-table = "7.1.1"
csv = "1.3.0"
dateparser = "0.2.1"
duckdb = { version = "1.0.0", features = ["json", "parquet", "csv", "chrono"] }
env_logger = "0.11.3"
futures = "0.3.30"
indicatif = "0.17.8"
itertools = "0.13.0"
log = "0.4.21"
once_cell = "1.19.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
sha2 = "0.10.8"
shlex = "1.3.0"
tokio = { version = "1.38.0", features = ["full", "macros", "rt-multi-thread", "time"] }
tokio-macros = "2.3.0"
toml = "0.8.19"
url = "2.5.0"
walkdir = "2.5.0"
